--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "dependencies": {
     "baconjs": "0.7.85",
+    "express": "4.14.0",
     "lodash": "4.15.0",
     "minimist": "1.2.0",
     "mkdirp": "0.5.1",
