--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "ISC",
   "dependencies": {
     "baconjs": "0.7.85",
+    "commander": "2.9.0",
     "express": "4.14.0",
     "lodash": "4.15.0",
-    "minimist": "1.2.0",
     "mkdirp": "0.5.1",
     "request": "2.74.0",
     "semver": "5.3.0"
