--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "registry-sync",
   "version": "1.0.1",
+  "description": "synchronize a remote npm registry for private use",
   "repository": "https://github.com/heikkipora/registry-sync",
   "bin": {
     "registry-serve": "bin/serve",
