Remove orphaned files from root folder with —-prune option

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "4.14.0",
     "lodash": "4.15.0",
     "mkdirp": "0.5.1",
+    "readdirp": "2.1.0",
     "request": "2.74.0",
     "semver": "5.3.0"
   },
