--- a/.bithoundrc
+++ b/.bithoundrc
@@ -1,3 +1,10 @@
-"critics": {
-  "lint": {"engine": "eslint"}
+{
+  "critics": {
+    "lint": {"engine": "eslint"}
+  },
+  "dependencies": {
+    "unused-ignores": [
+      "*"
+    ]
+  }
 }
