--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "registry-sync": "bin/sync"
   },
   "scripts": {
-    "eslint": "./node_modules/.bin/eslint bin/* lib"
+    "test": "./node_modules/.bin/eslint bin/* lib"
   },
   "author": "Heikki Pora",
   "license": "MIT",
