--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "mkdirp": "0.5.1",
     "readdirp": "2.1.0",
     "request": "2.81.0",
-    "semver": "5.3.0"
+    "rimraf": "2.6.1",
+    "semver": "5.3.0",
+    "streamifier": "0.1.1",
+    "tar-fs": "1.15.2"
   },
   "keywords": [
     "registry",
