--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "request": "2.81.0",
     "rimraf": "2.6.1",
     "semver": "5.3.0",
+    "ssri": "4.1.4",
     "streamifier": "0.1.1",
     "tar-fs": "1.15.2"
   },
