--- a/package.json
+++ b/package.json
@@ -1,30 +1,47 @@
 {
   "name": "registry-sync",
-  "version": "1.4.13",
+  "version": "2.0.0",
   "description": "synchronize a remote npm registry for private use",
   "repository": "https://github.com/heikkipora/registry-sync",
   "bin": {
-    "registry-serve": "bin/serve",
     "registry-sync": "bin/sync"
   },
   "scripts": {
-    "test": "./node_modules/.bin/eslint bin/* lib"
+    "build": "./build-npm",
+    "eslint": "eslint --fix src/* bin/* test/*",
+    "test": "mocha --require babel-register --require babel-polyfill --timeout 20000 test/*.js"
   },
   "author": "Heikki Pora",
   "license": "MIT",
   "dependencies": {
-    "baconjs": "1.0.1",
+    "babel-runtime": "6.26.0",
     "commander": "2.13.0",
-    "express": "4.16.2",
     "lodash": "4.17.4",
     "mkdirp": "0.5.1",
     "readdirp": "2.1.0",
     "request": "2.83.0",
+    "request-promise": "4.2.2",
     "rimraf": "2.6.2",
     "semver": "5.5.0",
     "ssri": "5.1.0",
     "streamifier": "0.1.1",
     "tar-fs": "1.16.0"
+  },
+  "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.2.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-register": "6.26.0",
+    "chai": "4.1.2",
+    "eslint": "4.16.0",
+    "eslint-plugin-mocha": "4.11.0",
+    "express": "4.16.2",
+    "mocha": "5.0.0"
   },
   "keywords": [
     "registry",
@@ -34,9 +51,6 @@
     "offline"
   ],
   "engines": {
-    "node": ">=4.4.0"
-  },
-  "devDependencies": {
-    "eslint": "4.16.0"
+    "node": ">=5.0.0"
   }
 }
