--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["env"],
-  "plugins": ["transform-object-rest-spread", "transform-runtime", "transform-class-properties"]
+  "plugins": ["transform-object-rest-spread", "transform-runtime"]
 }
