--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
   "author": "Heikki Pora",
   "license": "MIT",
   "dependencies": {
+    "axios": "0.18.0",
     "babel-runtime": "6.26.0",
     "bluebird": "3.5.1",
     "commander": "2.15.0",
     "lodash": "4.17.5",
     "mkdirp": "0.5.1",
-    "request": "2.83.0",
-    "request-promise": "4.2.2",
     "rimraf": "2.6.2",
     "semver": "5.5.0",
     "ssri": "5.2.4",
