--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
+before_install:
+  - npm i -g npm
 script:
+ - npm audit
  - npm run eslint
  - npm test
- - npm i nsp -g && nsp check
