--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "scripts": {
     "build": "./build-npm",
     "eslint": "eslint --fix src/* bin/*",
-    "test": "mocha --require babel-register --require babel-polyfill --timeout 120000 test/*.js"
+    "test": "mocha --require @babel/register --require @babel/polyfill --timeout 120000 test/*.js"
   },
   "author": "Heikki Pora",
   "license": "MIT",
   "dependencies": {
     "axios": "0.18.0",
-    "babel-runtime": "6.26.0",
+    "@babel/runtime": "7.1.2",
     "bluebird": "3.5.2",
     "commander": "2.18.0",
     "lodash": "4.17.11",
@@ -27,14 +27,14 @@
     "tar-fs": "1.16.3"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
+    "@babel/cli": "7.1.2",
+    "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.1.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/register": "7.0.0",
     "babel-eslint": "10.0.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-register": "6.26.0",
     "chai": "4.2.0",
     "eslint": "5.6.1",
     "eslint-plugin-mocha": "5.2.0",
