--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": [["@babel/preset-env", {
+    "targets": {
+      "node": "6.0.0"
+    }
+  }]],
   "plugins": ["@babel/plugin-proposal-object-rest-spread", "@babel/plugin-transform-runtime"]
 }
