--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "./build-npm",
-    "eslint": "eslint --fix src/* bin/*",
+    "eslint": "eslint --fix src/* bin/* test/*.js",
     "test": "mocha --require @babel/register --require @babel/polyfill --timeout 120000 test/*.js"
   },
   "author": "Heikki Pora",
