--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "build": "./build-npm",
-    "eslint": "eslint --fix src/* bin/* test/*.js",
-    "test": "mocha --require @babel/register --require @babel/polyfill --timeout 120000 test/*.js"
+    "eslint": "eslint . --ext .ts --fix",
+    "test": "mocha -r ts-node/register --timeout 120000 test/*.ts"
   },
   "author": "Heikki Pora",
   "license": "MIT",
@@ -19,21 +19,25 @@
     "lodash": "4.17.20",
     "semver": "7.3.4",
     "ssri": "8.0.1",
-    "streamifier": "0.1.1",
     "tar-fs": "2.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.12.10",
-    "@babel/core": "7.12.10",
-    "@babel/polyfill": "7.11.5",
-    "@babel/preset-env": "7.12.11",
-    "@babel/register": "7.12.10",
-    "babel-eslint": "10.1.0",
+    "@types/chai": "4.2.14",
+    "@types/lodash": "4.14.168",
+    "@types/mocha": "8.2.0",
+    "@types/node": "14.14.22",
+    "@types/semver": "7.3.4",
+    "@types/ssri": "7.1.0",
+    "@types/tar-fs": "2.0.0",
+    "@typescript-eslint/eslint-plugin": "4.14.2",
+    "@typescript-eslint/parser": "4.14.2",
     "chai": "4.2.0",
     "eslint": "7.19.0",
     "eslint-plugin-mocha": "8.0.0",
     "express": "4.17.1",
-    "mocha": "8.2.1"
+    "mocha": "8.2.1",
+    "ts-node": "9.1.1",
+    "typescript": "4.1.3"
   },
   "keywords": [
     "registry",
