Rewrite “manual” script suite for automated release test execution

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,4 @@ jobs:
      - run: npm audit
      - run: npm run eslint
      - run: npm test
-     - run: npm run build
+     - run: npm run release-test
