--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "registry-sync",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "synchronize a remote npm registry for private use",
   "repository": "https://github.com/heikkipora/registry-sync",
   "bin": {
@@ -15,6 +15,7 @@
   "author": "Heikki Pora",
   "license": "MIT",
   "dependencies": {
+    "@yarnpkg/lockfile": "1.1.0",
     "axios": "0.21.1",
     "commander": "7.0.0",
     "semver": "7.3.4",
@@ -29,6 +30,7 @@
     "@types/semver": "7.3.4",
     "@types/ssri": "7.1.0",
     "@types/tar-fs": "2.0.0",
+    "@types/yarnpkg__lockfile": "1.1.4",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
     "chai": "4.2.0",
