--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "./build-npm",
+    "prettier": "prettier --write .",
     "eslint": "eslint . --ext .ts --fix",
     "test": "mocha -r ts-node/register --timeout 120000 test/*.ts",
     "release-test": "cd release-test && ./run-sync-install-cycle.sh"
@@ -35,9 +36,11 @@
     "@typescript-eslint/parser": "4.14.2",
     "chai": "4.2.0",
     "eslint": "7.19.0",
+    "eslint-config-prettier": "7.2.0",
     "eslint-plugin-mocha": "8.0.0",
     "express": "4.17.1",
     "mocha": "8.2.1",
+    "prettier": "2.2.1",
     "ts-node": "9.1.1",
     "typescript": "4.1.3"
   },
