Apply prettier code formatting to the codebase.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,13 @@
 {
-    "compilerOptions": {
-        "outDir": "./build/src",
-        "allowJs": true,
-        "checkJs": false,
-        "noImplicitAny": true,
-        "module": "commonjs",
-        "target": "es2019",
-        "moduleResolution": "node",
-        "lib": [
-            "es2019"
-        ]
-    },
-    "include": ["src/**/*"]
+  "compilerOptions": {
+    "outDir": "./build/src",
+    "allowJs": true,
+    "checkJs": false,
+    "noImplicitAny": true,
+    "module": "commonjs",
+    "target": "es2019",
+    "moduleResolution": "node",
+    "lib": ["es2019"]
+  },
+  "include": ["src/**/*"]
 }
