--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chai": "4.3.4",
     "eslint": "8.5.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-formatter-codeframe": "7.32.1",
     "eslint-plugin-mocha": "10.0.3",
     "express": "4.17.2",
     "lint-staged": "12.1.4",
