Override default maxDiffsize for mocha

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint": "eslint --fix --format=codeframe --ext .ts .",
     "eslint:check": "eslint --max-warnings=0 --format=codeframe --ext .ts .",
     "lint-staged": "lint-staged --verbose",
-    "test": "mocha -r ts-node/register --timeout 120000 test/*.ts",
+    "test": "mocha -r ts-node/register --config test/.mocharc.js --timeout 120000 test/*.ts",
     "release-test": "cd release-test && ./run-sync-install-cycle.sh"
   },
   "author": "Heikki Pora",
