Upgrade eslint to v9
 @typescript-eslint/eslint-plugin  6.19.0  →  8.31.1
 @typescript-eslint/parser         6.19.0  →  8.31.1
 eslint                            8.56.0  →  9.25.1
 eslint-config-prettier             9.1.0  →  10.1.2
 eslint-plugin-mocha               10.5.0  →  11.0.0

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "./build-npm",
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check --loglevel warn .",
-    "eslint": "eslint --fix --format=codeframe --ext .ts .",
-    "eslint:check": "eslint --max-warnings=0 --format=codeframe --ext .ts .",
+    "eslint": "eslint --fix --format=codeframe",
+    "eslint:check": "eslint --max-warnings=0 --format=codeframe",
     "lint-staged": "lint-staged --verbose",
     "test": "mocha -r ts-node/register --config test/.mocharc.js --timeout 120000 test/*.ts",
     "release-test": "cd release-test && ./run-sync-install-cycle.sh"
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "@arkweid/lefthook": "0.7.7",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.25.1",
     "@types/chai": "5.2.1",
     "@types/lodash": "4.17.16",
     "@types/mocha": "10.0.10",
@@ -37,14 +39,15 @@
     "@types/ssri": "7.1.5",
     "@types/tar-fs": "2.0.4",
     "@types/yarnpkg__lockfile": "1.1.9",
-    "@typescript-eslint/eslint-plugin": "6.19.0",
-    "@typescript-eslint/parser": "6.19.0",
+    "@typescript-eslint/eslint-plugin": "8.31.1",
+    "@typescript-eslint/parser": "8.31.1",
     "chai": "5.2.0",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "9.25.1",
+    "eslint-config-prettier": "10.1.2",
     "eslint-formatter-codeframe": "7.32.1",
-    "eslint-plugin-mocha": "10.5.0",
+    "eslint-plugin-mocha": "11.0.0",
     "express": "5.1.0",
+    "globals": "16.0.0",
     "lint-staged": "15.5.1",
     "mocha": "11.1.0",
     "prettier": "3.5.3",
