--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm audit
-      - run: npm run prettier:check
-      - run: npm run eslint:check
+      - run: npm run eslint
       - run: npm test
       - run: npm run release-test
