--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
   },
   "scripts": {
     "build": "./build-npm",
-    "prettier": "prettier --write .",
-    "prettier:check": "prettier --check --loglevel warn .",
-    "eslint": "eslint --fix --format=codeframe",
-    "eslint:check": "eslint --max-warnings=0 --format=codeframe",
-    "lint-staged": "lint-staged --verbose",
+    "eslint": "eslint --max-warnings=0",
+    "fix-eslint": "eslint --fix",
     "test": "mocha -r ts-node/register --config test/.mocharc.js --timeout 120000 test/*.ts",
     "release-test": "cd release-test && ./run-sync-install-cycle.sh"
   },
@@ -43,14 +40,10 @@
     "@typescript-eslint/parser": "8.46.4",
     "chai": "6.2.1",
     "eslint": "9.39.1",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-formatter-codeframe": "7.32.2",
     "eslint-plugin-mocha": "11.2.0",
     "express": "5.1.0",
     "globals": "16.5.0",
-    "lint-staged": "16.2.6",
     "mocha": "11.7.5",
-    "prettier": "3.6.2",
     "ts-node": "10.9.2",
     "typescript": "5.9.3"
   },
