--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "build": "./build-npm",
-    "eslint": "eslint --max-warnings=0",
-    "fix-eslint": "eslint --fix",
+    "eslint": "eslint --max-warnings=0 src test",
+    "fix-eslint": "eslint --fix src test",
     "test": "mocha -r ts-node/register --config test/.mocharc.js --timeout 120000 test/*.ts",
     "release-test": "cd release-test && ./run-sync-install-cycle.sh"
   },
@@ -25,8 +25,6 @@
     "tar-fs": "3.1.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "3.3.3",
-    "@eslint/js": "9.39.2",
     "@types/chai": "5.2.3",
     "@types/lodash": "4.17.21",
     "@types/mocha": "10.0.10",
@@ -35,8 +33,6 @@
     "@types/ssri": "7.1.5",
     "@types/tar-fs": "2.0.4",
     "@types/yarnpkg__lockfile": "1.1.9",
-    "@typescript-eslint/eslint-plugin": "8.51.0",
-    "@typescript-eslint/parser": "8.51.0",
     "chai": "6.2.2",
     "eslint": "9.39.2",
     "eslint-plugin-mocha": "11.2.0",
@@ -44,7 +40,8 @@
     "globals": "17.0.0",
     "mocha": "11.7.5",
     "ts-node": "10.9.2",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.51.0"
   },
   "keywords": [
     "registry",
