--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,19 @@
 {
   "compilerOptions": {
-    "outDir": "./build/src",
-    "allowJs": true,
-    "checkJs": false,
+    "target": "es2024",
+    "module": "esnext",
+    "lib": ["es2024"],
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
+    "strict": true,
     "noImplicitAny": true,
-    "module": "commonjs",
-    "target": "es2022",
-    "moduleResolution": "node",
-    "lib": ["es2022"]
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "test/**/*", "bin/**/*"],
+  "exclude": ["node_modules"]
 }
