--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,6 @@ jobs:
       - run: npm ci
       - run: npm audit
       - run: npm run eslint
+      - run: npm run typecheck
       - run: npm test
       - run: npm run release-test
