Migrate release-test from js to ts

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,5 @@ jobs:
       - run: npm run eslint
       - run: npm run typecheck
       - run: npm test
+      - run: (cd release-test/server && npm ci && npm run typecheck)
       - run: npm run release-test
